--- a/node/template/acuity/src/css/index.css
+++ b/node/template/acuity/src/css/index.css
@@ -32,9 +32,32 @@ body
 	position:absolute;
 	height:calc(100%);
 	width:calc(100%);
+	min-width:100%;
+	min-height:100%;
 	display:grid;
 }
-
+.debug
+{
+	/*border: solid 1px red;*/
+	display:block;
+	text-align:left;
+	padding:20px;
+}
+.debug > *
+{
+	/*border: solid 1px red;*/
+	display:block;
+	text-align:left;
+}
+.debug > svg
+{
+	height:48px;
+	width:48px;
+}
+p
+{
+	text-align:left;
+}
 .test-logo
 {
 	/*border: solid 1px red;*/
